# spectacle

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  Makefile.ini.example  README.md
.github/workflows/: build.yml
plugins/SpectralAnalyzer/: Makefile
plugins/SpectralAnalyzer/meta/: DistrhoPluginInfo.h
plugins/spectacle/: Makefile
plugins/spectacle/meta/: DistrhoPluginInfo.h
resources/desktop/: spectacle-analyzer.desktop
scripts/: bin2c.sh  gzbin2c.sh
sources/dsp/: ARFollower.h  AnalyzerDefs.h  CQT.cpp  CQT.h  FFTPlanner.cpp  FFTPlanner.h  FFT_util.h  MultirateSTFT.cpp  MultirateSTFT.h  Oversampling.h  Oversampling.hpp  Oversampling.hpp.in  OversamplingCoefs.h  OversamplingStages.h  STFT.cpp  STFT.h  SpectralAnalyzer.cpp  SpectralAnalyzer.h
sources/plugin/: ColorPalette.cpp  ColorPalette.h  Config.cpp  Config.h  FontDefs.cpp  FontDefs.h  Parameters.cpp  Parameters.h  PluginSpectralAnalyzer.cpp  PluginSpectralAnalyzer.hpp  UISpectralAnalyzer.cpp  UISpectralAnalyzer.hpp
sources/ui/: Cairo++.h  Color.h  FontEngine.cpp  FontEngine.h  KnobSkin.cpp  KnobSkin.hpp  NanoVGHelpers.h  SpectrumView.cpp  SpectrumView.h
sources/ui/components/: ColorSlider.cpp  ColorSlider.h  FloatingWindow.cpp  FloatingWindow.h  MainToolBar.cpp  MainToolBar.h  ResizeHandle.cpp  ResizeHandle.h  SelectionRectangle.cpp  SelectionRectangle.h  SkinSlider.cpp  Slider.cpp  Slider.h  SpectrumView.cpp  SpectrumView.h  SpinBoxChooser.cpp  SpinBoxChooser.h  TextLabel.cpp  TextLabel.h
sources/ui/geometry/: Rect.h
sources/util/: format_string.cpp  format_string.h  ordinary_allocator.h  ordinary_allocator.tcc
